Retire the deprecated Integer/Long constructors for valueOf
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>